// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dashboard > should render a card when there is an error getting transactions 1`] = `
<div>
  <nav
    class="dashboard-nav svelte-5szabu"
  >
    <ul
      class="dashboard-nav-list svelte-5szabu"
    >
      <li>
        <a
          class="dusk-anchor dusk-anchor--on-surface dashboard-nav-list__item"
          href="send"
        >
          <span
            class="dashboard-nav-item-label svelte-5szabu"
          >
            Send
          </span>
           
          <span
            class="dashboard-nav-item-icons svelte-5szabu"
          >
            
            <svg
              class="dusk-icon dusk-icon--size--default"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M5,17.59L15.59,7H9V5H19V15H17V8.41L6.41,19L5,17.59Z"
              />
            </svg>
            
          </span>
          
        </a>
         
      </li>
      <li>
        <a
          class="dusk-anchor dusk-anchor--on-surface dashboard-nav-list__item"
          href="receive"
        >
          <span
            class="dashboard-nav-item-label svelte-5szabu"
          >
            Receive
          </span>
           
          <span
            class="dashboard-nav-item-icons svelte-5szabu"
          >
            
            <svg
              class="dusk-icon dusk-icon--size--default"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L7,15.59V9H5V19H15V17H8.41L19,6.41Z"
              />
            </svg>
            
          </span>
          
        </a>
         
      </li>
      <li>
        <a
          class="dusk-anchor dusk-anchor--on-surface dashboard-nav-list__item"
          href="staking"
        >
          <span
            class="dashboard-nav-item-label svelte-5szabu"
          >
            Stake
          </span>
           
          <span
            class="dashboard-nav-item-icons svelte-5szabu"
          >
            
            <svg
              class="dusk-icon dusk-icon--size--default"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 3C7.58 3 4 4.79 4 7V17C4 19.21 7.59 21 12 21S20 19.21 20 17V7C20 4.79 16.42 3 12 3M18 17C18 17.5 15.87 19 12 19S6 17.5 6 17V14.77C7.61 15.55 9.72 16 12 16S16.39 15.55 18 14.77V17M18 12.45C16.7 13.4 14.42 14 12 14C9.58 14 7.3 13.4 6 12.45V9.64C7.47 10.47 9.61 11 12 11C14.39 11 16.53 10.47 18 9.64V12.45M12 9C8.13 9 6 7.5 6 7S8.13 5 12 5C15.87 5 18 6.5 18 7S15.87 9 12 9Z"
              />
            </svg>
            
          </span>
          
        </a>
         
      </li>
      <li>
        <a
          class="dusk-anchor dusk-anchor--on-surface dashboard-nav-list__item"
          href="allocate"
        >
          <span
            class="dashboard-nav-item-label svelte-5szabu"
          >
            Shield / Unshield
          </span>
           
          <span
            class="dashboard-nav-item-icons svelte-5szabu"
          >
            
            <svg
              class="dusk-icon dusk-icon--size--default"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,18A6,6 0 0,1 6,12C6,11 6.25,10.03 6.7,9.2L5.24,7.74C4.46,8.97 4,10.43 4,12A8,8 0 0,0 12,20V23L16,19L12,15M12,4V1L8,5L12,9V6A6,6 0 0,1 18,12C18,13 17.75,13.97 17.3,14.8L18.76,16.26C19.54,15.03 20,13.57 20,12A8,8 0 0,0 12,4Z"
              />
            </svg>
            
          </span>
          
        </a>
         
      </li>
    </ul>
  </nav>
   
  <span>
    some text
  </span>
   
  <article
    class="transactions svelte-mwi4ip"
  >
    <header
      class="transactions__header svelte-mwi4ip"
    >
      <h3
        class="h4"
      >
        Transactions
      </h3>
       
      <a
        aria-disabled="false"
        class="dusk-anchor dusk-anchor--on-surface dusk-anchor-button dusk-anchor-button--variant--primary dusk-anchor-button--size--default transactions__footer-button"
        href="/some-base-path/dashboard/transactions"
      >
        <span
          class="dusk-anchor-button__text"
        >
          All transactions
        </span>
        
      </a>
    </header>
     
    <div
      class="dusk-suspense transactions-list__container"
    >
      <details
        class="dusk-error-details dusk-error-details__details dusk-suspense__error"
      >
        <summary
          class="dusk-error-details__summary"
        >
          Error getting transactions
        </summary>
         
        <pre
          class="dusk-error-details__error"
        >
          			
          some error message
          
		
        </pre>
      </details>
      
       
       
    </div>
  </article>
  
</div>
`;

exports[`Dashboard > should render the dashboard page with the transactions after they are loaded 1`] = `
<div>
  <nav
    class="dashboard-nav svelte-5szabu"
  >
    <ul
      class="dashboard-nav-list svelte-5szabu"
    >
      <li>
        <a
          class="dusk-anchor dusk-anchor--on-surface dashboard-nav-list__item"
          href="send"
        >
          <span
            class="dashboard-nav-item-label svelte-5szabu"
          >
            Send
          </span>
           
          <span
            class="dashboard-nav-item-icons svelte-5szabu"
          >
            
            <svg
              class="dusk-icon dusk-icon--size--default"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M5,17.59L15.59,7H9V5H19V15H17V8.41L6.41,19L5,17.59Z"
              />
            </svg>
            
          </span>
          
        </a>
         
      </li>
      <li>
        <a
          class="dusk-anchor dusk-anchor--on-surface dashboard-nav-list__item"
          href="receive"
        >
          <span
            class="dashboard-nav-item-label svelte-5szabu"
          >
            Receive
          </span>
           
          <span
            class="dashboard-nav-item-icons svelte-5szabu"
          >
            
            <svg
              class="dusk-icon dusk-icon--size--default"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L7,15.59V9H5V19H15V17H8.41L19,6.41Z"
              />
            </svg>
            
          </span>
          
        </a>
         
      </li>
      <li>
        <a
          class="dusk-anchor dusk-anchor--on-surface dashboard-nav-list__item"
          href="staking"
        >
          <span
            class="dashboard-nav-item-label svelte-5szabu"
          >
            Stake
          </span>
           
          <span
            class="dashboard-nav-item-icons svelte-5szabu"
          >
            
            <svg
              class="dusk-icon dusk-icon--size--default"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 3C7.58 3 4 4.79 4 7V17C4 19.21 7.59 21 12 21S20 19.21 20 17V7C20 4.79 16.42 3 12 3M18 17C18 17.5 15.87 19 12 19S6 17.5 6 17V14.77C7.61 15.55 9.72 16 12 16S16.39 15.55 18 14.77V17M18 12.45C16.7 13.4 14.42 14 12 14C9.58 14 7.3 13.4 6 12.45V9.64C7.47 10.47 9.61 11 12 11C14.39 11 16.53 10.47 18 9.64V12.45M12 9C8.13 9 6 7.5 6 7S8.13 5 12 5C15.87 5 18 6.5 18 7S15.87 9 12 9Z"
              />
            </svg>
            
          </span>
          
        </a>
         
      </li>
      <li>
        <a
          class="dusk-anchor dusk-anchor--on-surface dashboard-nav-list__item"
          href="allocate"
        >
          <span
            class="dashboard-nav-item-label svelte-5szabu"
          >
            Shield / Unshield
          </span>
           
          <span
            class="dashboard-nav-item-icons svelte-5szabu"
          >
            
            <svg
              class="dusk-icon dusk-icon--size--default"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,18A6,6 0 0,1 6,12C6,11 6.25,10.03 6.7,9.2L5.24,7.74C4.46,8.97 4,10.43 4,12A8,8 0 0,0 12,20V23L16,19L12,15M12,4V1L8,5L12,9V6A6,6 0 0,1 18,12C18,13 17.75,13.97 17.3,14.8L18.76,16.26C19.54,15.03 20,13.57 20,12A8,8 0 0,0 12,4Z"
              />
            </svg>
            
          </span>
          
        </a>
         
      </li>
    </ul>
  </nav>
   
  <span>
    some text
  </span>
   
  <article
    class="transactions svelte-mwi4ip"
  >
    <header
      class="transactions__header svelte-mwi4ip"
    >
      <h3
        class="h4"
      >
        Transactions
      </h3>
       
      <a
        aria-disabled="false"
        class="dusk-anchor dusk-anchor--on-surface dusk-anchor-button dusk-anchor-button--variant--primary dusk-anchor-button--size--default transactions__footer-button"
        href="/some-base-path/dashboard/transactions"
      >
        <span
          class="dusk-anchor-button__text"
        >
          All transactions
        </span>
        
      </a>
    </header>
     
    <div
      class="dusk-suspense transactions-list__container"
    >
      <dl
        class="transactions-list"
      >
        <dt
          class="transactions-list__term"
        >
          Hash
        </dt>
        <dd
          class="transactions-list__datum transactions-list__datum--hash"
        >
          <samp>
            <a
              class="dusk-anchor dusk-anchor--on-surface"
              href="/explorer/transactions/transaction?id=tg874534tddsghdtst54hdfh795h"
              rel="noopener noreferrer"
              target="_blank"
            >
              tg874534tddsghdtst54hdfh795h
            </a>
          </samp>
           
        </dd>
        <dt
          class="transactions-list__term"
        >
          Type
        </dt>
        <dd
          class="transactions-list__datum"
        >
          <span
            class="dusk-badge dusk-badge--variant-neutral transactions-list__badge"
          >
            STAKE
          </span>
           
        </dd>
        <dt
          class="transactions-list__term"
        >
          Block
        </dt>
        <dd
          class="transactions-list__datum"
        >
          33,460
           
        </dd>
        <dt
          class="transactions-list__term"
        >
          Amount
        </dt>
        <dd
          class="transactions-list__datum"
        >
          +27,000.00
           
          <span
            class="transactions-list__ticker"
          >
            Dusk
          </span>
           
        </dd>
        <dt
          class="transactions-list__term"
        >
          Fee
        </dt>
        <dd
          class="transactions-list__datum"
        >
          1,876.00
           
          <span
            class="transactions-list__ticker"
          >
            Dusk
          </span>
           
        </dd>
      </dl>
      <dl
        class="transactions-list"
      >
        <dt
          class="transactions-list__term"
        >
          Hash
        </dt>
        <dd
          class="transactions-list__datum transactions-list__datum--hash"
        >
          <samp>
            <a
              class="dusk-anchor dusk-anchor--on-surface"
              href="/explorer/transactions/transaction?id=tg874534tddsghdtst54hdfh794h"
              rel="noopener noreferrer"
              target="_blank"
            >
              tg874534tddsghdtst54hdfh794h
            </a>
          </samp>
           
        </dd>
        <dt
          class="transactions-list__term"
        >
          Type
        </dt>
        <dd
          class="transactions-list__datum"
        >
          <span
            class="dusk-badge dusk-badge--variant-neutral transactions-list__badge"
          >
            TRANSFER
          </span>
           
        </dd>
        <dt
          class="transactions-list__term"
        >
          Block
        </dt>
        <dd
          class="transactions-list__datum"
        >
          33,459
           
        </dd>
        <dt
          class="transactions-list__term"
        >
          Amount
        </dt>
        <dd
          class="transactions-list__datum"
        >
          -25,000.00
           
          <span
            class="transactions-list__ticker"
          >
            Dusk
          </span>
           
        </dd>
      </dl>
      <dl
        class="transactions-list"
      >
        <dt
          class="transactions-list__term"
        >
          Hash
        </dt>
        <dd
          class="transactions-list__datum transactions-list__datum--hash"
        >
          <samp>
            <a
              class="dusk-anchor dusk-anchor--on-surface"
              href="/explorer/transactions/transaction?id=tg874534tddsghdtst54hdfh793h"
              rel="noopener noreferrer"
              target="_blank"
            >
              tg874534tddsghdtst54hdfh793h
            </a>
          </samp>
           
        </dd>
        <dt
          class="transactions-list__term"
        >
          Type
        </dt>
        <dd
          class="transactions-list__datum"
        >
          <span
            class="dusk-badge dusk-badge--variant-neutral transactions-list__badge"
          >
            TRANSFER
          </span>
           
        </dd>
        <dt
          class="transactions-list__term"
        >
          Block
        </dt>
        <dd
          class="transactions-list__datum"
        >
          33,458
           
        </dd>
        <dt
          class="transactions-list__term"
        >
          Amount
        </dt>
        <dd
          class="transactions-list__datum"
        >
          +25,000.00
           
          <span
            class="transactions-list__ticker"
          >
            Dusk
          </span>
           
        </dd>
      </dl>
      <dl
        class="transactions-list"
      >
        <dt
          class="transactions-list__term"
        >
          Hash
        </dt>
        <dd
          class="transactions-list__datum transactions-list__datum--hash"
        >
          <samp>
            <a
              class="dusk-anchor dusk-anchor--on-surface"
              href="/explorer/transactions/transaction?id=tg874534tddsghdtst54hdfh792h"
              rel="noopener noreferrer"
              target="_blank"
            >
              tg874534tddsghdtst54hdfh792h
            </a>
          </samp>
           
        </dd>
        <dt
          class="transactions-list__term"
        >
          Type
        </dt>
        <dd
          class="transactions-list__datum"
        >
          <span
            class="dusk-badge dusk-badge--variant-neutral transactions-list__badge"
          >
            TRANSFER
          </span>
           
        </dd>
        <dt
          class="transactions-list__term"
        >
          Block
        </dt>
        <dd
          class="transactions-list__datum"
        >
          33,457
           
        </dd>
        <dt
          class="transactions-list__term"
        >
          Amount
        </dt>
        <dd
          class="transactions-list__datum"
        >
          -25,000.00
           
          <span
            class="transactions-list__ticker"
          >
            Dusk
          </span>
           
        </dd>
        <dt
          class="transactions-list__term"
        >
          Fee
        </dt>
        <dd
          class="transactions-list__datum"
        >
          1,876.00
           
          <span
            class="transactions-list__ticker"
          >
            Dusk
          </span>
           
        </dd>
      </dl>
      <dl
        class="transactions-list"
      >
        <dt
          class="transactions-list__term"
        >
          Hash
        </dt>
        <dd
          class="transactions-list__datum transactions-list__datum--hash"
        >
          <samp>
            <a
              class="dusk-anchor dusk-anchor--on-surface"
              href="/explorer/transactions/transaction?id=tg874534tddsghdtst54hdfh791h"
              rel="noopener noreferrer"
              target="_blank"
            >
              tg874534tddsghdtst54hdfh791h
            </a>
          </samp>
           
        </dd>
        <dt
          class="transactions-list__term"
        >
          Type
        </dt>
        <dd
          class="transactions-list__datum"
        >
          <span
            class="dusk-badge dusk-badge--variant-neutral transactions-list__badge"
          >
            TRANSFER
          </span>
           
        </dd>
        <dt
          class="transactions-list__term"
        >
          Block
        </dt>
        <dd
          class="transactions-list__datum"
        >
          33,456
           
        </dd>
        <dt
          class="transactions-list__term"
        >
          Amount
        </dt>
        <dd
          class="transactions-list__datum"
        >
          -25,000.00
           
          <span
            class="transactions-list__ticker"
          >
            Dusk
          </span>
           
        </dd>
      </dl>
      
      
    </div>
  </article>
  
</div>
`;
